# holdingsparser

./: .gitignore  LICENSE  README.md  README.rst  justfile  parser.py  pyproject.toml  requirements.txt  setup.py
holdingsparser/: 13F-HR.xsl  __main__.py  application.py  file.py  holdingsparser.py  parser.py  scrape.py  sec.py
tests/integration/: sample_response.xml  test_application.py  test_path.py  test_scrape.py  test_sec.py
tests/unit/: test_scrape.py
