[tool.poetry]
name = "holdingsparser"
version = "0.1.0"
description = "A program that parses 13F reports filed with the SEC."
authors = ["mhadam <michael@hadam.us>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
